--- a/sentiment_app/try.ipynb
+++ b/sentiment_app/try.ipynb
@@ -108,6 +108,54 @@
     "predicted_label = loaded_model.predict([sample_text])[0]\n",
     "print(f\"Predicted label for the sample text: {predicted_label}\")\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "from sklearn.feature_extraction.text import TfidfVectorizer\n",
+    "from sklearn.svm import SVC\n",
+    "from sklearn.pipeline import Pipeline\n",
+    "import joblib  # Corrected import statement\n",
+    "\n",
+    "# Load the movie review dataset from NLTK\n",
+    "from nltk.corpus import movie_reviews\n",
+    "from nltk.corpus import stopwords\n",
+    "\n",
+    "# Create a DataFrame from the NLTK movie review dataset\n",
+    "documents = [(list(movie_reviews.words(fileid)), category)\n",
+    "             for category in movie_reviews.categories()\n",
+    "             for fileid in movie_reviews.fileids(category)]\n",
+    "df = pd.DataFrame(documents, columns=['text', 'label'])\n",
+    "\n",
+    "# Preprocess the text data\n",
+    "df['text'] = df['text'].apply(lambda x: ' '.join(x))\n",
+    "df['text'] = df['text'].str.lower()\n",
+    "\n",
+    "# Split the dataset into train and test sets\n",
+    "train_df = df.sample(frac=0.8, random_state=42)\n",
+    "test_df = df.drop(train_df.index)\n",
+    "\n",
+    "# Create a pipeline with TfidfVectorizer and SVC\n",
+    "pipeline = Pipeline([\n",
+    "    ('tfidf', TfidfVectorizer(stop_words=stopwords.words('english'))),\n",
+    "    ('clf', SVC(kernel='linear', C=1.0))\n",
+    "])\n",
+    "\n",
+    "# Fit the pipeline on the training data\n",
+    "pipeline.fit(train_df['text'], train_df['label'])\n",
+    "\n",
+    "# Serialize the trained model to a file\n",
+    "joblib.dump(pipeline, 'movie_review_model.pkl')\n",
+    "\n",
+    "# Load the model from the file\n",
+    "loaded_model = joblib.load('movie_review_model.pkl')\n",
+    "\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
